# oneCInteractionLib

./: .gitignore  LICENSE  README.md  dump_discount_groups.py  pyproject.toml
.github/workflows/: publish.yml
src/oneCInteraction/: __init__.py  categories.py  characteristics.py  connection.py  customers.py  discounts.py  groups.py  log.py  nomenclature.py  orders.py  properties.py  structures.py
tests/: test_lib.py
