[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oneCInteraction"
version = "1.0.2"
description = "A Python library for interacting with 1C:Enterprise databases via COM connection."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "agcl" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "pytz",
    "pywin32; platform_system == 'Windows'"
]
